--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.5.0",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "socket.io": "^4.7.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
+    "prettier": "^3.0.0",
     "sequelize-cli": "^6.6.1"
   }
 }
